Styles task previews on dashboard with correct spacing and font sizes/colour [RS]

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -645,9 +645,24 @@ Note: Beware of modifying this element as it can break the animations - you shou
   padding-bottom: 7px;
 }
 
-.todo-preview h3 {
+.task-preview h3 {
   font-size: 10;
   color: rgb(0, 0, 0);
   padding-bottom: 7px;
   padding-left: 4px;
+}
+
+.task-preview h4 {
+  padding-left: 6px;
+  padding-bottom: 10px;
+}
+
+.task-preview h4:hover {
+  font-weight: bolder;
+  color: blue;
+}
+
+.task-preview a {
+  text-decoration: none;
+  padding-top: 0px;
 }
